--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -36,12 +36,18 @@
     <ClInclude Include="define.h">
       <Filter>02. Main</Filter>
     </ClInclude>
+    <ClInclude Include="CEntity.h">
+      <Filter>03. Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>02. Main</Filter>
     </ClCompile>
     <ClCompile Include="CEngine.cpp">
+      <Filter>03. Game</Filter>
+    </ClCompile>
+    <ClCompile Include="CEntity.cpp">
       <Filter>03. Game</Filter>
     </ClCompile>
   </ItemGroup>
