1. PEN, BRUSH 추가 + GDI Obejct 생성 함수 작성
2. 더블 버퍼 구현을 위한 subDC 생성

--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="CTimeMgr.h">
       <Filter>03. Game\Manager\TimeMgr</Filter>
     </ClInclude>
+    <ClInclude Include="CSelectObj.h">
+      <Filter>03. Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -127,6 +130,9 @@
     </ClCompile>
     <ClCompile Include="CTimeMgr.cpp">
       <Filter>03. Game\Manager\TimeMgr</Filter>
+    </ClCompile>
+    <ClCompile Include="CSelectObj.cpp">
+      <Filter>03. Game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
