1. 전역으로 Log 생성 후 렌더될 수 있도록 define.h에 함수명 : 라인, 로그 메세지 출력 기능 추가

--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -102,9 +102,6 @@
     <ClInclude Include="pch.h">
       <Filter>02. Main</Filter>
     </ClInclude>
-    <ClInclude Include="define.h">
-      <Filter>02. Main</Filter>
-    </ClInclude>
     <ClInclude Include="CEntity.h">
       <Filter>03. Game</Filter>
     </ClInclude>
@@ -164,6 +161,9 @@
     </ClInclude>
     <ClInclude Include="CSound.h">
       <Filter>03. Game\07. Asset\Sound</Filter>
+    </ClInclude>
+    <ClInclude Include="define.h">
+      <Filter>03. Game\02. Header</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
