--- a/GameClient/GameClient.vcxproj.filters
+++ b/GameClient/GameClient.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClInclude Include="define.h">
       <Filter>03. Game\02. Header</Filter>
     </ClInclude>
+    <ClInclude Include="func.h">
+      <Filter>03. Game\02. Header</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -223,6 +226,9 @@
     </ClCompile>
     <ClCompile Include="CSound.cpp">
       <Filter>03. Game\07. Asset\Sound</Filter>
+    </ClCompile>
+    <ClCompile Include="func.cpp">
+      <Filter>03. Game\02. Header</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
