--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -149,6 +149,7 @@
     <ClInclude Include="CLevelMgr.h" />
     <ClInclude Include="CLevel_Stage01.h" />
     <ClInclude Include="CObject.h" />
+    <ClInclude Include="CObstacle.h" />
     <ClInclude Include="CPathMgr.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CSelectObj.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="CLevelMgr.cpp" />
     <ClCompile Include="CLevel_Stage01.cpp" />
     <ClCompile Include="CObject.cpp" />
+    <ClCompile Include="CObstacle.cpp" />
     <ClCompile Include="CPathMgr.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CSelectObj.cpp" />
