--- a/GameClient/GameClient.vcxproj
+++ b/GameClient/GameClient.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="CObject.h" />
     <ClInclude Include="CObstacle.h" />
     <ClInclude Include="CPathMgr.h" />
+    <ClInclude Include="CPlatform.h" />
     <ClInclude Include="CPlayer.h" />
     <ClInclude Include="CRigidBody.h" />
     <ClInclude Include="CSelectObj.h" />
@@ -187,6 +188,7 @@
     <ClCompile Include="CObject.cpp" />
     <ClCompile Include="CObstacle.cpp" />
     <ClCompile Include="CPathMgr.cpp" />
+    <ClCompile Include="CPlatform.cpp" />
     <ClCompile Include="CPlayer.cpp" />
     <ClCompile Include="CRigidBody.cpp" />
     <ClCompile Include="CSelectObj.cpp" />
